cambios, actualizaciones, extensiones de sass

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -3,3 +3,9 @@
     font-weight: 400;
     font-style: italic;
 }
+
+@mixin cen-fra {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
