--- a/css/style.css
+++ b/css/style.css
@@ -288,12 +288,46 @@ span {
   padding: 20px;
 }
 
-.col22 {
-  color: beige;
-  font-family: "Lucida Grande";
-  font-size: 30px;
+.gran {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.gran3 {
+  padding-bottom: 10%;
+}
+
+.col22 {
+  color: beige;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+#girar23 {
+  -webkit-box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0) !important;
+  animation: rotacion 10s linear infinite;
+  background-color: transparent;
+  align-items: center;
+  align-content: center;
+  width: 35%;
+  border-radius: 20%;
+  margin: auto 0;
+}
+
+@keyframes rotacion {
+  from {
+    transform: rotateZ(0deg);
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
 /*-------- ABOUT US -------------*/
 .container96 {
   display: grid;
@@ -384,24 +418,6 @@ span {
   font-size: 18px;
 }
 
-#girar {
-  animation: rotacion 10s linear infinite;
-  align-items: center;
-  align-content: center;
-  width: 30%;
-  float: right;
-  border-radius: 30%;
-  margin: auto 0;
-}
-
-@keyframes rotacion {
-  from {
-    transform: rotateZ(0deg);
-  }
-  to {
-    transform: rotateZ(360deg);
-  }
-}
 /*    ----   IMAGES  ----*/
 .ipere {
   background-color: rgb(26, 12, 0);
@@ -1001,6 +1017,12 @@ nav .desktop56 {
   .d-block {
     width: 80%;
     height: 80%;
+  }
+}
+/* index*/
+@media only screen and (max-width: 480px) {
+  .header33 {
+    display: none !important;
   }
 }
 
