--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ nav nav .mobile .header {
 
 nav nav .mobile .header .more button {
   border: none;
-  background-color: red;
+  background-color: rgb(48, 50, 124);
   padding: 15px;
   cursor: pointer;
 }
@@ -167,11 +167,6 @@ nav .desktop {
 
 .collapsed {
   display: none;
-}
-
-#whatsapp-icon img {
-  width: 45px;
-  height: 45px;
 }
 
 .bo122 {
