--- a/scss/style.scss
+++ b/scss/style.scss
@@ -573,8 +573,10 @@ body{
   color: white;
   font-size: 19px;
   @include font-fra;
+  transition: transform 0.3s ease;
 }
-.info1, .info2, .info3:hover {
+.info1:hover, .info2:hover, .info3:hover {
+  transform: scale(1.1);
   cursor: pointer;
 }
 .dos {
@@ -614,6 +616,7 @@ body{
   height: auto;
   max-width: 100%;
   max-height: 100%;
+  animation: girar 9s infinite linear;
 }
 #img57 {
   grid-area: img;
@@ -779,6 +782,7 @@ nav .desktop56 {
   color: white;
   justify-content: center;
 }
+
 .footer156 {
   float: right;
   justify-content: center;
@@ -793,16 +797,48 @@ nav .desktop56 {
     max-height: 20px;
     height: 100vh;
   }
-  .image56, .img57, .logo56, .containercu, .logo {
+  .image56, .img57, .logo56, .logo {
+    display: none;
+  }
+  .home56 {
+    height: 800px;
+    display: flex;
+    flex-direction: column;
+  }
+  .containercu, .cube{
+    margin-top: -20px;
+    max-height: 100px;
+  }
+ .title {
+  font-size: 40px;
+  padding-top: 20px;
+ }
+ .title2 {
+  font-size: 25px;
+ }
+  .linea56 {
     display: none;
   }
   .container-servi {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-content: center;
     }
   .container566 {
     padding-top: 10%;
   }
+  .text23 {
+    margin-top: -35%;
+  }
+  .container23 {  
+    margin-top: -35%;
+  }
+  .about56 {
+    max-height: 900px;
+  }
 }
+
 /* Factory2 */
 @media only screen and (max-width: 720px) {
   .container177 {
@@ -846,6 +882,7 @@ nav .desktop56 {
     width: 100%;
   }
 }
+
 @media only screen and (max-width: 480px) {
   .container12 {
     align-items: stretch;
@@ -859,6 +896,7 @@ nav .desktop56 {
     width: 100%;
   }
 }
+
 /*Index*/
 @media only screen and (max-width: 720px) {
   .container {
