--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,15 @@ html .texto {
   padding-top: 0;
 }
 
-.texto {
-  background-color: #3c4550;
-}
-
 .container {
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 3px 3px 5px 2px rgba(36, 35, 35, 0.5);
+  box-shadow: 3px 3px 5px 2px rgb(36, 35, 35);
   width: 100%;
   max-width: 400px;
-  padding: 30px;
-  margin: 30px;
+  padding: 20px;
+  margin: 20px;
   background: linear-gradient(to bottom, #4a5258, #3c4550);
   border-radius: 2rem;
 }
@@ -44,11 +40,8 @@ html .texto {
   text-align: center;
   position: relative;
   border-radius: 10%;
+  border: 0.5px solid black;
   transition: transform 1s;
-}
-
-.derecha {
-  padding-top: 20px;
 }
 
 .container .imagenes:hover {
@@ -62,16 +55,9 @@ html .texto {
   align-items: center;
   justify-content: center;
   margin: 0px;
-  padding-top: 10%;
-  padding-bottom: 7%;
+  padding-top: 80px;
+  padding-bottom: 30px;
   z-index: 2000;
-  margin-bottom: -2px;
-}
-
-.tete {
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 header h2 {
@@ -98,9 +84,8 @@ iframe .videaso {
 }
 
 h4 {
-  padding-top: 20px;
+  padding-top: 120px;
   padding-right: 10px;
-  padding-bottom: 20px;
 }
 
 /* ------- NAVBAR Index ---------*/
@@ -123,7 +108,7 @@ nav nav .mobile .header {
 
 nav nav .mobile .header .more button {
   border: none;
-  background-color: rgb(48, 50, 124);
+  background-color: red;
   padding: 15px;
   cursor: pointer;
 }
@@ -167,6 +152,11 @@ nav .desktop {
 
 .collapsed {
   display: none;
+}
+
+#whatsapp-icon img {
+  width: 45px;
+  height: 45px;
 }
 
 .bo122 {
@@ -305,7 +295,7 @@ span {
 }
 
 .gran3 {
-  padding-bottom: 10%;
+  padding-bottom: 9%;
 }
 
 .col22 {
@@ -665,11 +655,9 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-style: italic;
-  transition: transform 0.3s ease;
 }
 
-.info1:hover, .info2:hover, .info3:hover {
-  transform: scale(1.1);
+.info1, .info2, .info3:hover {
   cursor: pointer;
 }
 
@@ -714,7 +702,6 @@ body {
   height: auto;
   max-width: 100%;
   max-height: 100%;
-  animation: girar 9s infinite linear;
 }
 
 #img57 {
@@ -926,45 +913,14 @@ nav .desktop56 {
     max-height: 20px;
     height: 100vh;
   }
-  .image56, .img57, .logo56, .logo {
-    display: none;
-  }
-  .home56 {
-    height: 800px;
-    display: flex;
-    flex-direction: column;
-  }
-  .containercu, .cube {
-    margin-top: -20px;
-    max-height: 100px;
-  }
-  .title {
-    font-size: 40px;
-    padding-top: 20px;
-  }
-  .title2 {
-    font-size: 25px;
-  }
-  .linea56 {
+  .image56, .img57, .logo56, .containercu, .logo {
     display: none;
   }
   .container-servi {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-content: center;
   }
   .container566 {
     padding-top: 10%;
-  }
-  .text23 {
-    margin-top: -35%;
-  }
-  .container23 {
-    margin-top: -35%;
-  }
-  .about56 {
-    max-height: 900px;
   }
 }
 /* Factory2 */
@@ -1023,32 +979,7 @@ nav .desktop56 {
     width: 100%;
   }
 }
-/*Index*/
-@media only screen and (max-width: 720px) {
-  .container {
-    width: 20px;
-  }
-  nav .desktop {
-    display: none;
-  }
-  .header33 {
-    display: none;
-  }
-}
-@media only screen and (max-width: 620px) {
-  .header33 {
-    display: none;
-  }
-  .fr {
-    display: none;
-  }
-  .tete {
-    padding-top: 20%;
-  }
-  #fot2 {
-    display: none;
-  }
-}
+
 /* Images*/
 @media only screen and (max-width: 720px) {
   .ipere {
